make the grid reusable

--- a/lib/wulin_master/views/index.html.haml
+++ b/lib/wulin_master/views/index.html.haml
@@ -1,2 +1,5 @@
 - controller.screen.grids.each do |grid|
+  - puts grid.name
+  - puts grid.path
+  - puts grid.javascript_column_model
   = grid.render
