--- a/lib/wulin_master/views/_toolbar_item.html.erb
+++ b/lib/wulin_master/views/_toolbar_item.html.erb
@@ -1,5 +1,5 @@
 <div class="toolbar_item">
-  <a<%= toolbar_item.anchor_tag_options%>>
+  <a<%= toolbar_item.anchor_tag_options.inject(""){|sum, e| sum += " #{e.first}='#{e.last}'"} %>>
     <span><%= toolbar_item.title %></span>
   </a>
 </div>
