--- a/lib/wulin_master/views/layouts/application.html.erb
+++ b/lib/wulin_master/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     
     <%= csrf_meta_tags %>
     <%= javascript_tag do -%>
-      window._token = '<%= form_authenticity_token %>';
+      window._token = encodeURIComponent('<%= form_authenticity_token %>');
     <% end -%>
   </head>
   <body>
