--- a/lib/wulin_master/views/layouts/application.html.erb
+++ b/lib/wulin_master/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Terra Nova</title>
+    <title><%= WulinMaster.app_title %></title>
     <%= javascript_include_tag 'jquery' %>
     <%= stylesheet_link_tag *WulinMaster.stylesheets %>
     <%= javascript_include_tag *WulinMaster.javascripts %>
-    
     <%= csrf_meta_tags %>
     <%= javascript_tag do -%>
       window._token = encodeURIComponent('<%= form_authenticity_token %>');
