Some bug fix about create and delete

--- a/lib/wulin_master/views/layouts/application.html.erb
+++ b/lib/wulin_master/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= WulinMaster.app_title %></title>
+    <title><%= WulinMaster.configuration.app_title %></title>
     <%= javascript_include_tag 'jquery' %>
     <%= stylesheet_link_tag *WulinMaster.stylesheets %>
     <%= javascript_include_tag *WulinMaster.javascripts %>
