Create dialog improvement"

--- a/lib/wulin_master/views/_grid_form.html.erb
+++ b/lib/wulin_master/views/_grid_form.html.erb
@@ -16,7 +16,8 @@
     </div>
     <% end -%>
     <div class="submit"> 
-      <input id="<%= entity_name %>_submit" name="commit" type="submit" value="Create <%= entity_name.titleize %>" /> 
+      <input id="<%= entity_name %>_submit" name="commit" type="submit" value=" Create " /> 
+      <input id="<%= entity_name %>_submit_continue" name="commit" type="submit" value=" Create and Continue " /> 
     </div>
   </form>
 </div>
