Add grid css custom support

--- a/lib/wulin_master/views/_grid.html.erb
+++ b/lib/wulin_master/views/_grid.html.erb
@@ -1,4 +1,4 @@
-<div id='grid_<%= grid.name %>' class='grid_container' style='<%= grid.style_for_container %>'>
+<div id='grid_<%= grid.name %>' class='grid_container' style='<%= grid.styles %>'>
   <div class='grid-header'>
     <%= grid.toolbar.render %>
     <h2><%= grid.title %></h2>
