--- a/lib/wulin_master/views/home.html.erb
+++ b/lib/wulin_master/views/home.html.erb
@@ -1,4 +1,7 @@
 <%= controller.menu.render %>
 <div id="content">
   <div id="screen_content"></div>
+  <div id="confirm_dialog" class='ui-state-highlight' style="display: none;" title="Delete Confirmation">
+  <p><br /><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .2em;"></span>Are you sure to do this ?</p>
+  </div>
 </div>
