--- a/lib/wulin_master/views/_grid_form.html.erb
+++ b/lib/wulin_master/views/_grid_form.html.erb
@@ -1,25 +1,24 @@
-<%#= Grid create form %>
-<div id="<%= grid.name %>-form" title="Create new <%= grid.name %>" class="create_form">
+<% model_name = grid.model.name.downcase -%>
+<div id="<%= grid.name %>-form" title="Create new <%= model_name.titleize %>" class="create_form">
   <%- 
-  entity_name = grid.name.to_s 
   columns = grid.columns.delete_if {|x| x.name.to_s == 'id' }
   datepicker_str = ''
   %>
-  <form accept-charset="UTF-8" action="/<%= entity_name.tableize %>" class="<%= entity_name %>" id="new_<%= entity_name %>" method="post">
+  <form accept-charset="UTF-8" action="/<%= model_name.tableize %>" class="<%= model_name %>" id="new_<%= grid.name %>" method="post">
     <div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div> 
     <%- columns.each do |column| %>
     <%- column_name = column.name.to_s %>
-    <%- datepicker_str << %!$( "##{entity_name}_#{column_name}" ).datepicker({ dateFormat: 'yy-mm-dd' });! if column.sql_type.to_s == 'datetime'  %>
+    <%- datepicker_str << %!$( "##{model_name}_#{column_name}" ).datepicker({ dateFormat: 'yy-mm-dd' });! if column.sql_type.to_s == 'datetime'  %>
     <div class="field" name="<%= column_name %>">
-      <label for="<%= entity_name %>_<%= column_name %>"><%= column.label %></label>
-      <input id="<%= entity_name %>_<%= column_name %>" name="<%= entity_name %>[<%= column_name %>]" type="text" />
+      <label for="<%= model_name %>_<%= column_name %>"><%= column.label %></label>
+      <input id="<%= model_name %>_<%= column_name %>" name="<%= model_name %>[<%= column_name %>]" type="text" />
       <div class="field_error">
       </div>
     </div>
     <% end -%>
     <div class="submit"> 
-      <input id="<%= entity_name %>_submit" name="commit" type="submit" value=" Create " /> 
-      <input id="<%= entity_name %>_submit_continue" name="commit" type="submit" value=" Create and Continue " /> 
+      <input id="<%= grid.name %>_submit" name="commit" type="submit" value=" Create " /> 
+      <input id="<%= grid.name %>_submit_continue" name="commit" type="submit" value=" Create and Continue " /> 
     </div>
   </form>
 </div>
