--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -61,6 +61,8 @@ $pager_background:             #eff3f8
     outline:  0 none
   &.master_flashing
     background-color: pink
+  &.selected
+    background:             $selected_row_background
 	  
 .ui-widget-content.slick-row.ui-state-active.selected
   :background             $selected_row_background
