fixed the editor background color

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -5,7 +5,7 @@ $column_header_padding:       4px
 $column_header_border_color:  #dce0e2
 
 $odd_row_background:          #f5f9fc
-$selected_row_background:     #5f83b9
+$selected_row_background:     #6D97D5
 
 $pager_background:             #eff3f8
 
@@ -63,6 +63,8 @@ $pager_background:             #eff3f8
     background-color: pink
   &.selected
     background:             $selected_row_background
+  &.editable
+    background-color: white
 	  
 .ui-widget-content.slick-row.ui-state-active.selected
   :background             $selected_row_background
