--- a/app/views/_grid.html.erb
+++ b/app/views/_grid.html.erb
@@ -6,7 +6,7 @@
   <div class='grid'></div>
   <div class='pager'></div>
   <script type='text/javascript'>
-  gridManager.createNewGrid('<%= grid.name.to_s.html_safe %>', <%= grid.path.inspect.html_safe %>, <%= grid.javascript_column_model.html_safe %>, <%= grid.states_for_user(self.try(:current_user)).html_safe %>);
+  gridManager.createNewGrid('<%= grid.name.to_s.html_safe %>', <%= grid.path.inspect.html_safe %>, <%= grid.javascript_column_model.html_safe %>, <%= grid.states_for_user(controller.try(:current_user)).html_safe %>);
   </script>
 </div>
 
