grid form template improve

--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -1,24 +1,23 @@
-<% model_name = grid.model.name.downcase -%>
+<%- 
+model_name = grid.model.name.downcase
+columns = grid.columns.delete_if {|x| x.name.to_s == 'id' }
+datepicker_str = ''
+%>
 <div id="<%= grid.name %>-form" title="Create new <%= model_name.titleize %>" class="create_form">
-  <%- 
-  columns = grid.columns.delete_if {|x| x.name.to_s == 'id' }
-  datepicker_str = ''
-  %>
   <form accept-charset="UTF-8" action="/<%= model_name.tableize %>" class="<%= model_name %>" id="new_<%= grid.name %>" method="post">
     <div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div> 
     <%- columns.each do |column| %>
-    <%- column_name = column.form_name %>
-    <%- datepicker_str << %!$( "##{model_name}_#{column_name}" ).datepicker({ dateFormat: 'yy-mm-dd' });! if column.sql_type.to_s == 'datetime'  %>
-    <div class="field" name="<%= column_name %>">
-      <label for="<%= model_name %>_<%= column_name %>"><%= column.label %></label>
-      <%- if column.sql_type.to_s == 'belongs_to' %>
-        <%= select_tag "#{model_name}[#{column_name}]", options_from_collection_for_select(column.choices, "id", column.option_text_attribute), {:include_blank => !column.presence_required?, :class => 'chzn-select', :style => "width:250px"} %>
-      <%- else %>
-        <input id="<%= model_name %>_<%= column_name %>" name="<%= model_name %>[<%= column_name %>]" type="text" style="width:250px" />
-      <%- end %>
-      <div class="field_error">
+      <%- column_name = column.form_name %>
+      <%- datepicker_str << %!$( "##{model_name}_#{column_name}" ).datepicker({ dateFormat: 'yy-mm-dd' });! if column.sql_type.to_s == 'datetime'  %>
+      <div class="field" name="<%= column_name %>">
+        <label for="<%= model_name %>_<%= column_name %>"><%= column.label %></label>
+        <%- if column.sql_type.to_s == 'belongs_to' %>
+          <%= select_tag "#{model_name}[#{column_name}]", options_from_collection_for_select(column.choices, "id", column.option_text_attribute), {:include_blank => !column.presence_required?, :class => 'chzn-select', :style => "width:250px"} %>
+        <%- else %>
+          <input id="<%= model_name %>_<%= column_name %>" name="<%= model_name %>[<%= column_name %>]" type="text" style="width:250px" />
+        <%- end %>
+        <div class="field_error"></div>
       </div>
-    </div>
     <% end -%>
     <div class="submit"> 
       <input id="<%= grid.name %>_submit" name="commit" type="submit" value=" Create " /> 
@@ -26,5 +25,8 @@
     </div>
   </form>
 </div>
-<%= javascript_tag datepicker_str if datepicker_str.present? -%>
-<%= javascript_tag '$(".chzn-select").chosen();'%>
+
+<%= javascript_tag do -%>
+  $(".chzn-select").chosen();
+  <%= datepicker_str -%>
+<% end -%>
