Grid creation form bug fix

--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -1,5 +1,5 @@
 <%- 
-model_name = grid.model.name.downcase
+model_name = grid.model.name.underscore
 columns = grid.columns.delete_if {|x| x.name.to_s == 'id' }
 datepicker_str = ''
 %>
