--- a/app/assets/stylesheets/grid_form.sass
+++ b/app/assets/stylesheets/grid_form.sass
@@ -22,6 +22,7 @@
     .field_error
       color:  red
       font-size: 11px 
-      display: inline
+      display: inline-block
       margin-left: 5px
+      max-width: 85px
       
