override ui dialog overflow

--- a/app/assets/stylesheets/jquery_ui_overrides.sass
+++ b/app/assets/stylesheets/jquery_ui_overrides.sass
@@ -16,3 +16,9 @@
   :background           white
 .ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover 
   :top         				  6px
+  
+.ui-dialog
+  :overflow visible
+  .ui-dialog-content
+    :overflow visible
+  
