--- a/app/assets/stylesheets/grid_form.sass
+++ b/app/assets/stylesheets/grid_form.sass
@@ -6,7 +6,7 @@
   form
     margin: 20px 0
     .field
-      padding: 5px
+      padding: 5px 0
       label
         width:		 		100px
         margin-right: 5px
