Make gird's action configurable

--- a/app/views/_grid.html.erb
+++ b/app/views/_grid.html.erb
@@ -7,7 +7,7 @@
   <div class='grid'></div>
   <div class='pager'></div>
   <script type='text/javascript'>
-  gridManager.createNewGrid('<%= grid.name.to_s.html_safe %>', <%= grid.path.inspect.html_safe %>, <%= grid.javascript_column_model.html_safe %>, <%= grid.states_for_user(current_user).html_safe %>);
+  gridManager.createNewGrid('<%= grid.name.to_s.html_safe %>', <%= grid.path.inspect.html_safe %>, <%= grid.javascript_column_model.html_safe %>, <%= grid.states_for_user(current_user).html_safe %>, <%= grid.get_actions.to_s.html_safe -%>);
   </script>
 </div>
 
