--- a/app/views/_menu.html.erb
+++ b/app/views/_menu.html.erb
@@ -1,5 +1,5 @@
 <div id="navigation">
-  <h1><%= WulinMaster.configuration.app_title %></h1>
+  <h1><%= WulinMaster.config.app_title %></h1>
   
   <div id="activity">
     <h2>Activity</h2>
