--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= WulinMaster.configuration.app_title %></title>
+    <title><%= WulinMaster.config.app_title %></title>
     <%= stylesheet_link_tag    *WulinMaster.stylesheets %>
     <%= javascript_include_tag *WulinMaster.javascripts %>
     <%= csrf_meta_tags %>
