--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -65,6 +65,8 @@ $pager_background:             #eff3f8
     background:             $selected_row_background
   &.editable
     background-color: white
+  &.active
+    color: white
 	  
 .ui-widget-content.slick-row.ui-state-active.selected
   :background             $selected_row_background
