Add Boole type supprot

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -71,6 +71,8 @@ $pager_background:             #eff3f8
 .ui-widget-content.slick-row.ui-state-active.selected
   :background             $selected_row_background
 
+.cell-effort-driven
+  :text-align center
   
 .grid-canvas
   :background             white
