--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -22,7 +22,11 @@ datepicker_str = ''
           {:include_blank => !column.presence_required?, :multiple => true, :class => 'chzn-select', :style => "width:250px"} %>
         
         <%- else %>
-          <input id="<%= model_name %>_<%= column_name %>" name="<%= model_name %>[<%= column_name %>]" type="text" style="width:250px" />
+          <%- if column.sql_type.to_s == 'boolean' %>
+            <input type="checkbox" id="<%= model_name %>_<%= column_name %>" name="<%= model_name %>[<%= column_name %>]" value="1" />
+          <% else %>
+            <input id="<%= model_name %>_<%= column_name %>" name="<%= model_name %>[<%= column_name %>]" type="text" style="width:250px" />
+          <% end -%>
         <%- end %>
         <div class="field_error"></div>
       </div>
