--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -2,6 +2,6 @@
 <div id="content">
   <div id="screen_content"></div>
   <div id="confirm_dialog" class='ui-state-highlight' style="display: none;" title="Delete Confirmation">
-  <h4><br /><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .2em;"></span>Are you sure to do this ?</h4>
+  <h4><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .2em;"></span>Are you sure to do this ?</h4>
   </div>
 </div>
