--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -13,17 +13,17 @@ object = grid.model.new
         <label for="<%= model_name %>_<%= column_name %>"><%= column.label %></label>
         <%- if column.sql_type.to_s == 'belongs_to' %>
           <%= form.select column_name, 
-          options_from_collection_for_select(column.choices, "id", column.option_text_attribute), 
+          options_from_collection_for_select(column.choices, "id", column.option_text_attribute), {},
           {:include_blank => !column.presence_required?, :class => 'chzn-select', :style => "width:250px"} %>
           
         <%- elsif column.sql_type.to_s == 'has_and_belongs_to_many' %>
           <%= form.select column.reflection.name.to_s, 
-          options_from_collection_for_select(column.choices, "id", column.option_text_attribute), 
+          options_from_collection_for_select(column.choices, "id", column.option_text_attribute), {},
           {:include_blank => !column.presence_required?, :multiple => true, :class => 'chzn-select', :style => "width:250px"} %>
           
         <%- elsif column.options[:choices].present? %>
           <%= select_tag "#{model_name}[#{column_name}]", raw(column.options[:choices].inject(''){|options, x| options << "<option value='#{x[:id]}'>#{x[:name]}</option>"}), 
-          {:class => 'chzn-select', :style => "width:250px"} %>
+          :class => 'chzn-select', :style => "width:250px" %>
           
         <%- else %>
           <%- if column.sql_type.to_s.downcase == 'boolean' %>
