Add DoubleSelectEditor to slick.editors.js

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -67,6 +67,8 @@ $pager_background:             #eff3f8
     background-color: white
   &.active
     color: white
+    span
+      color: black
 	  
 .ui-widget-content.slick-row.ui-state-active.selected
   :background             $selected_row_background
