MICS 15m - render grid from only when add action is active

--- a/app/views/_grid.html.erb
+++ b/app/views/_grid.html.erb
@@ -12,7 +12,9 @@
   </script>
 </div>
 
+<%- if grid.get_actions.include?('add') %>
 <!-- Create form -->
 <%= render '/grid_form', :grid => grid %>
+<% end -%>
 
 
