MISC correct the index template for wulin_master

--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -1,4 +1,4 @@
-<%= HomepageController.set_menu -%>
+<%- HomepageController.set_menu %>
 <%= controller.menu.render %>
 <div id="content">
   <div id="screen_content"></div>
