FEATURE #6627 - Find a way to see where we are in the grid (which cell is selected)

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -5,7 +5,7 @@ $column_header_padding:       4px
 $column_header_border_color:  #dce0e2
 
 $odd_row_background:          #f5f9fc
-$selected_row_background:     #6D97D5
+$selected_row_background:     #81ABD7
 
 $pager_background:             #eff3f8
 
@@ -67,6 +67,7 @@ $pager_background:             #eff3f8
     background-color: white
   &.active
     color: white
+    border: black solid 1px
     span
       color: black
 	  
