--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -45,5 +45,14 @@ object = grid.model.new
 
 <%= javascript_tag do -%>
   $(".chzn-select").chosen();
+  window._focused = {};
+  $('#<%= grid.name %>-form .chzn-select~.chzn-container').focusin(function(){
+    var id = $(this).attr("id");
+    if(!window._focused[id]) {
+      $(this).trigger('mousedown');
+      window._focused[id] = true;
+    }
+  });
+  
   <%= datepicker_str -%>
 <% end -%>
