MISC 5m - Correct grid border style

--- a/app/assets/stylesheets/body.sass
+++ b/app/assets/stylesheets/body.sass
@@ -25,8 +25,8 @@ body
   .pager
     :height                   27px
   
-  .grid-header, .grid, .pager
-    border-right: 1px solid #A5A5A5
+  // .grid-header, .grid, .pager
+  //   border-right: 1px solid #A5A5A5
     
 #content
   :position                   absolute
