MISC 2m - Correct toolbar style and class

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -20,7 +20,7 @@ $toolbar_button_height:  48px
       :height             $toolbar_button_height
       :text-align         center
       :color              black
-      :font-size          1.2em
+      :font-size          12px
       +text-shadow(white, 0px, 1px, 0)
       span
         :display          block
@@ -30,7 +30,7 @@ $toolbar_button_height:  48px
         :left             0px
         :right            0px
         :height           12px
-        
+
         
 .toolbar_icon_search
   :background             image-url('ui/search_icon2.png') no-repeat top center
