--- a/app/assets/stylesheets/grid_form.sass
+++ b/app/assets/stylesheets/grid_form.sass
@@ -4,7 +4,7 @@
   display: none
   background-color: #EDEDED !important
   form
-    margin: 20px 0
+    padding: 20px 0
     .field
       padding: 5px 0
       label
