--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -48,7 +48,7 @@ object = grid.model.new
 <%= javascript_tag do -%>
   $(".chzn-select").chosen();
   window._focused = {};
-  $('#<%= grid.name %>-form .chzn-select~.chzn-container').focusin(function(){
+  $('.chzn-container:visible').focusin(function(){
     var id = $(this).attr("id");
     if(!window._focused[id]) {
       $(this).trigger('mousedown');
