MISC - Change the editable style for blank cell(background-color and color are both white)

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -64,7 +64,7 @@ $pager_background:             #eff3f8
   &.selected
     background:             $selected_row_background
   &.editable
-    background-color: white
+    background-color:       $selected_row_background
   &.active
     color: white
     border: black solid 1px
