MISC - Correct editable cell style in grid

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -64,7 +64,7 @@ $pager_background:             #eff3f8
   &.selected
     background:             $selected_row_background
   &.editable
-    background-color:       $selected_row_background
+    background-color:       #FFFFF0
   &.active
     color: white
     border: black solid 1px
