MISC - Correct overided css for slider

--- a/app/assets/stylesheets/jquery_ui_overrides.sass
+++ b/app/assets/stylesheets/jquery_ui_overrides.sass
@@ -12,7 +12,7 @@
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default
   :border               none
   
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default
+.ui-state-default, .ui-widget-header .ui-state-default
   :background           white
 .ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover 
   :top         				  6px
