MISC - Correct active css for destroy cell

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -66,7 +66,7 @@ $pager_background:             #eff3f8
   &.editable
     background-color:       #FFFFF0
   &.active
-    color: white
+    // color: white
     border: black solid 1px
     span
       color: black
