--- a/app/views/_grid.html.erb
+++ b/app/views/_grid.html.erb
@@ -13,7 +13,8 @@
                               '<%= grid.path_for_json(request.query_parameters).to_s.html_safe %>',
                               <%= grid.javascript_column_model.html_safe %>,
                               <%= grid.states_for_user(current_user).html_safe %>,
-                              <%= grid.get_actions.to_s.html_safe -%>);
+                              <%= grid.get_actions.to_s.html_safe -%>,
+                              <%= grid.options.html_safe %>);
   </script>
 </div>
 
