MISC - Correct grid form for datepicker eidotr

--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -9,7 +9,7 @@ object = grid.model.new
     <%- columns.each do |column| %>
       <%- if column.options[:formable] != false %>
         <%- column_name = column.form_name %>
-        <%- datepicker_str << %!$('##{model_name}_#{column_name}').datepicker({ dateFormat: 'yy-mm-dd' });! if column.sql_type.to_s.downcase == 'datetime'  %>
+        <%- datepicker_str << %!$('##{model_name}_#{column_name}').datepicker({ dateFormat: 'yy-mm-dd' });! if column.sql_type.to_s.downcase.include? 'date'  %>
         <div class="field" name="<%= column_name %>">
           <label for="<%= model_name %>_<%= column_name %>"><%= column.label %></label>
           <%- if column.sql_type.to_s == 'belongs_to' %>
