--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -66,7 +66,7 @@ remote_paths = []
       <input id="<%= grid.name %>_submit" name="commit" type="submit" value=" Create " /> 
       <input id="<%= grid.name %>_submit_continue" name="commit" type="submit" value=" Create and Continue " /> 
     </div>
-    <%= hidden_field_tag 'remote_paths', remote_paths.uniq.compact.join(',') %>
+    <%= hidden_field_tag 'remote_paths', j(remote_paths.uniq.compact.join(',')) %>
   <% end -%>
 </div>
 
