FEATURE #8172 - Framework: Batch update function

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -46,3 +46,5 @@ $toolbar_button_height:  48px
   :background             image-url('ui/delete_icon_trash.png') no-repeat top center
 .toolbar_icon_create
   :background             image-url('ui/create_icon.png') no-repeat top center
+.toolbar_icon_batch_update
+  :background             image-url('ui/batch_update.png') no-repeat top center
